# mcp-server-ncats-translator

./: .gitignore  main.py  pyproject.toml
.claude/: settings.local.json
.claude/mcp-builder/: SKILL.md
src/translator_mcp/: app.py  resolver.py  utils.py
src/translator_mcp/tools/: __init__.py  get_curie_identifiers.py  get_normalized_nodes.py  query_knowledge_graph.py
