[project]
name = "mcp-server-ncats-translator"
version = "0.1.0"
description = "MCP server for NCATS Translator biomedical knowledge graph APIs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
translator-mcp = "translator_mcp.app:mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/translator_mcp"]
